styles/styles.css
/* ... */
.main-container {
  flex-grow: 1;
}

.main-inner {
  padding-top: 37px;
}

.page-container {
  width: 1160px;
  margin: 0 auto;
}

.page-header-inner {
  padding-bottom: 53px;
}

.navigation {
  display: flex;
  flex-direction: column;
  width: 1041px;
  margin: 0 auto;
}

.navigation-logo {
  width: 145px;
  margin-bottom: 35px;
  margin-left: 1px;
}

.button-search {
  font-family: "Rubik", sans-serif;
  font-style: normal;
  font-weight: normal;
  font-size: 16px;
  line-height: 19px;
  text-align: center;
  width: 160px;
  padding: 8px;
  margin: 0;
}

.input-site-search {
  flex-grow: 1;
  min-width: 140px;
  /*min-width: 140px;*/
}

.main-menu-list {
  display: flex;
  flex-wrap: wrap;
  margin: 0;
  padding: 0;
  width: 1041px;
  list-style-type: none;
}

.user-menu-list {
  display: flex;
  flex-wrap: wrap;
  justify-content: space-between;
  width: 1041px;
  padding: 0;
  margin: 0;
  margin-bottom: 29px;
  list-style-type: none;
}

/* Login/Logout submenu */
.user-menu-item:nth-child(2) {
  display: flex;
  flex-wrap: wrap;
  justify-content: space-between;
  width: 220px;
  margin-right: 15px;
}

.user-menu-item .logout-link {
  margin-right: 26px;
  /*  todo: need to hardcode the margin here?  */
}

.user-menu-item:last-child {
  width: 141px;
  text-align: right;
  margin-left: auto;
}

.main-menu-item:nth-child(n+2) {
  margin-right: 19px;
}

.main-menu-item:first-child {
  margin-right: 304px;
  width: 236px;
}

.main-menu-item:last-child {
  margin-left: auto;
  margin-right: 0;
}

.site-search-form {
  display: flex;
  width: 516px;
  margin-right: 24px;
}

/* The attributes are taken from the parent block */
.input-text {
  font-family: inherit;
  font-size: inherit;
  line-height: inherit;
  color: inherit;
  background-color: inherit;
  border: none;
  padding: 0;
}

.user-menu-link {
  display: block;
  padding: 0 5px;
  box-sizing: content-box;
  color: black;
  background-color: #FFE17F;
  text-decoration: none;
}

.main-menu-link {
  display: block;
  font-family: "Raleway", sans-serif;
  font-weight: 800;
  font-size: 18px;
  line-height: 21px;
  letter-spacing: 0.2em;
  text-transform: uppercase;
  color: black;
  background-color: #FFE17F;
  text-decoration: none;
}

.promoted-products {
  margin-bottom: 70px;
}

.product-card-annotation {
  display: grid;
  column-gap: 200px;
  grid-template-rows: min-content min-content min-content auto min-content;
}

.button-cart {
  font-family: inherit;
  font-size: inherit;
  color: black;
  background-color: #FFE17F;
  border: none;
}

.button-borderless {
  border: none;
}

.button-services {
  width: 160px;
}

.services-slider-pagination-item {
  margin-bottom: 45px;
}

.services-slider-pagination-item:last-of-type {
  margin-bottom: 0;
}

.navigation-link {
  font-family: "Raleway", sans-serif;
  font-weight: 800;
  font-size: 18px;
  line-height: 21px;
  color: black;
  background-color: inherit;
  letter-spacing: 0.2em;
  text-decoration: none;
  text-transform: uppercase;
  opacity: 1;
}

.product-feature-name {
  font-size: 16px;
  line-height: 30px;
}

.product-card-feature-value {
  grid-row: 1/2;
  margin: 0;
  font-size: 36px;
  line-height: 30px;
  color: black;
}

.services {
  min-width: 1160px;
  background-color: #F0F0F0;
  margin-bottom: 90px;
  padding-top: 70px;
  padding-bottom: 140px;
}

.services-slider-pagination {
  display: flex;
  flex-direction: column;
  align-items: start;
  list-style-type: none;
  width: 280px;
  margin: 0;
  margin-right: 120px;
  padding: 0;
  padding-top: 20px;
}

.services-list {
  margin: 0;
  padding: 0;
  list-style-type: none;
}

.services-title {
  margin: 0;
  margin-bottom: 40px;
}

.about-sections-title {
  margin: 0;
  margin-bottom: 50px;
}

.categories {
  margin-bottom: 69px;
}

.categories-list-item-link {
  font-family: "Raleway", sans-serif;
  font-size: 18px;
  line-height: 24px;
  letter-spacing: -0.02em;
  color: black;
  text-decoration: none;
}

.categories-list {
  display: flex;
  flex-wrap: wrap;
  padding: 0;
  margin: 0;
  list-style-type: none;
  column-gap: 40px;
}

.categories-figcaption {
  width: 160px;
}

.category-background {
  display: flex;
  justify-content: center;
  align-items: center;
  width: 160px;
  height: 160px;
  margin-bottom: 33px;
  background-color: #FFE17F;
}

.about {
  margin-bottom: 87px;
}

.shipping-info {
  display: flex;
  width: 1160px;
  align-items: center;
  height: 100px;
  margin-top: 0;
  margin-bottom: 97px;
  margin-left: auto;
  margin-right: auto;
  background-color: #F0F0F0;
}

.shipping-info-button {
  margin-right: 33px;;
}

.shipping-info-text {
  font-family: "Raleway", sans-serif;
  font-weight: 800;
  font-size: 20px;
  line-height: 23px;
  text-align: center;
  letter-spacing: 0.2em;
  text-transform: uppercase;
  color: black;
  background-color: #F0F0F0;
  margin: 0 auto;
  padding: 0;
}

.shipping-companies-list {
  font-weight: bold;
  font-size: 18px;
  line-height: 20px;
  color: black;
  padding: 0;
  margin: 0;
  list-style-type: none;
}

.shipping-companies-item {
  margin-bottom: 28px;
}

.shipping-companies-item:last-of-type {
  margin-bottom: 0;
}

.about-info-link {
  align-self: flex-start;
  margin-top: auto;
}

.about-info-list {
  display: flex;
  padding: 50px 0 0;
  margin: 0;
  justify-content: space-between;
  list-style-type: none;
}

.about-info-text {
  margin: 0;
  margin-bottom: 35px;
}

.about-info-item {
  display: flex;
  flex-direction: column;
  width: 560px;
}

.contacts-sub-title {
  font-weight: bold;
  font-size: 24px;
  line-height: 30px;
  margin: 0;
  margin-bottom: 15px;
  padding: 0;
}

.font-style-normal {
  font-style: normal;
}

.contacts-phone {
  text-decoration: none;
  color: inherit;
}

.newsletter {
  padding-top: 75px;
  padding-bottom: 131px;
  background-color: #F0F0F0;
  min-width: 1160px;
}

.newsletter-section {
  display: flex;
  align-items: baseline;
  margin-bottom: 53px;
}

.newsletter-section:last-child {
  margin-bottom: 0;
}
/* ... */

